[package]
name = "pokemon"
version = "0.1.0"
authors = ["Jed <valentin.jeudy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
mongodb = "2"
tokio = { version = "1.12.0", features = ["full"] }